fixed spacing issues

--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -423,7 +423,7 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-items: center;
-  // border: green solid 2px;
+  // border: green solid 3px;
 
   h2 {
     font-family: Poppins, sans-serif;
@@ -441,9 +441,10 @@ footer {
 
 .exit-button {
   align-self: flex-end;
-  margin-right: 10rem;
-  margin-top: 3rem;
+  margin-right: 3rem;
+  padding-top: 1rem;
   opacity: 20%;
+  // border: green solid 2px;
 }
 
 .current {
@@ -457,7 +458,7 @@ footer {
   }
 
   &-prev{
-    margin-right: 5rem;
+    margin-right: 1.5rem;
     opacity: 20%;
     
 
@@ -468,7 +469,7 @@ footer {
   }
   
   &-next{
-    margin-left: 5rem;
+    margin-left: 1.5rem;
     opacity: 20%;
     
     &:hover{
@@ -507,7 +508,7 @@ footer {
     align-items: center;
     overflow: hidden;
     outline: none;
-    
+    margin: 0 1rem 0 1rem;
   }
 
   &-link:hover {
